// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-new add spec files if user added proj-tool jest: file content: /hello/.eslintrc.json 1`] = `
"{
  \\"extends\\": [
    \\"./node_modules/@c4605/toolconfs/eslintrc.base\\",
    \\"./node_modules/@c4605/toolconfs/eslintrc.ts\\",
    \\"./node_modules/@c4605/toolconfs/eslintrc.prettier\\"
  ],
  \\"parserOptions\\": {
    \\"project\\": \\"./tsconfig.json\\"
  },
  \\"rules\\": {}
}"
`;

exports[`react-new add spec files if user added proj-tool jest: file content: /hello/README.md 1`] = `
"# hello

## Usage

\`\`\`bash
yarn start # watch and serve code
yarn build # build code
\`\`\`
"
`;

exports[`react-new add spec files if user added proj-tool jest: file content: /hello/package.json 1`] = `
"{
  \\"name\\": \\"hello\\",
  \\"version\\": \\"0.1.0\\",
  \\"main\\": null,
  \\"author\\": \\"c4605 <bolasblack@gmail.com>\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"start\\": \\"poi -r ts-node/register --parallel --serve ./src\\",
    \\"build\\": \\"poi -r ts-node/register --parallel ./src\\"
  },
  \\"devDependencies\\": {},
  \\"dependencies\\": {},
  \\"prettier\\": \\"@c4605/toolconfs/prettierrc\\"
}"
`;

exports[`react-new add spec files if user added proj-tool jest: file content: /hello/poi.config.ts 1`] = `
"import { Config } from 'poi'

const config: Config = {
  entry: 'src/index.tsx',
  plugins: [
    {
      resolve: '@poi/plugin-typescript',
      options: {},
    },
    {
      resolve: '@poi/plugin-astroturf',
      options: {
        loaderOptions: {
          extension: '.scss',
        },
      },
    },
  ],
}

export default config
"
`;

exports[`react-new add spec files if user added proj-tool jest: file content: /hello/src/index.tsx 1`] = `
"import 'react-hot-loader'
import * as React from 'react'
import * as ReactDOM from 'react-dom'
import { css } from 'astroturf'

function renderApp() {
  ReactDOM.render(<h1>It works</h1>, document.getElementById('app')!)
}

renderApp()
;(module as any).hot.accept(renderApp)

css\`
  h1 {
    font-size: 32px;
  }
\`
"
`;

exports[`react-new add spec files if user added proj-tool jest: file content: /hello/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@c4605/toolconfs/tsconfig\\",
  \\"compilerOptions\\": {
    \\"jsx\\": \\"react\\"
  }
}"
`;

exports[`react-new add spec files if user added proj-tool jest: file structure 1`] = `
Array [
  "/hello/package.json",
  "/hello/.eslintrc.json",
  "/hello/README.md",
  "/hello/poi.config.ts",
  "/hello/tsconfig.json",
  "/hello/src/index.tsx",
]
`;

exports[`react-new add spec files if user added proj-tool jest: rule tasks 1`] = `
Array [
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "prettier",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "eslint",
        "eslint-config-prettier",
        "@typescript-eslint/parser",
        "@typescript-eslint/eslint-plugin",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
        "react",
        "@types/react",
        "react-dom",
        "@types/react-dom",
        "astroturf",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "typescript",
        "ts-node",
        "@types/node",
        "poi",
        "@types/poi",
        "@poi/plugin-typescript",
        "@poi/plugin-astroturf",
        "sass",
        "sass-loader",
        "react-hot-loader",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
]
`;

exports[`react-new support \`author\` option: file content: /hello/.eslintrc.json 1`] = `
"{
  \\"extends\\": [
    \\"./node_modules/@c4605/toolconfs/eslintrc.base\\",
    \\"./node_modules/@c4605/toolconfs/eslintrc.ts\\",
    \\"./node_modules/@c4605/toolconfs/eslintrc.prettier\\"
  ],
  \\"parserOptions\\": {
    \\"project\\": \\"./tsconfig.json\\"
  },
  \\"rules\\": {}
}"
`;

exports[`react-new support \`author\` option: file content: /hello/README.md 1`] = `
"# hello

## Usage

\`\`\`bash
yarn start # watch and serve code
yarn build # build code
\`\`\`
"
`;

exports[`react-new support \`author\` option: file content: /hello/package.json 1`] = `
"{
  \\"name\\": \\"hello\\",
  \\"version\\": \\"0.1.0\\",
  \\"main\\": null,
  \\"author\\": \\"c4605 <bolasblack@gmail.com>\\",
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"start\\": \\"poi -r ts-node/register --parallel --serve ./src\\",
    \\"build\\": \\"poi -r ts-node/register --parallel ./src\\"
  },
  \\"devDependencies\\": {},
  \\"dependencies\\": {},
  \\"prettier\\": \\"@c4605/toolconfs/prettierrc\\"
}"
`;

exports[`react-new support \`author\` option: file content: /hello/poi.config.ts 1`] = `
"import { Config } from 'poi'

const config: Config = {
  entry: 'src/index.tsx',
  plugins: [
    {
      resolve: '@poi/plugin-typescript',
      options: {},
    },
    {
      resolve: '@poi/plugin-astroturf',
      options: {
        loaderOptions: {
          extension: '.scss',
        },
      },
    },
  ],
}

export default config
"
`;

exports[`react-new support \`author\` option: file content: /hello/src/index.tsx 1`] = `
"import 'react-hot-loader'
import * as React from 'react'
import * as ReactDOM from 'react-dom'
import { css } from 'astroturf'

function renderApp() {
  ReactDOM.render(<h1>It works</h1>, document.getElementById('app')!)
}

renderApp()
;(module as any).hot.accept(renderApp)

css\`
  h1 {
    font-size: 32px;
  }
\`
"
`;

exports[`react-new support \`author\` option: file content: /hello/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@c4605/toolconfs/tsconfig\\",
  \\"compilerOptions\\": {
    \\"jsx\\": \\"react\\"
  }
}"
`;

exports[`react-new support \`author\` option: file structure 1`] = `
Array [
  "/hello/package.json",
  "/hello/.eslintrc.json",
  "/hello/README.md",
  "/hello/poi.config.ts",
  "/hello/tsconfig.json",
  "/hello/src/index.tsx",
]
`;

exports[`react-new support \`author\` option: rule tasks 1`] = `
Array [
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "prettier",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "eslint",
        "eslint-config-prettier",
        "@typescript-eslint/parser",
        "@typescript-eslint/eslint-plugin",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
        "react",
        "@types/react",
        "react-dom",
        "@types/react-dom",
        "astroturf",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "typescript",
        "ts-node",
        "@types/node",
        "poi",
        "@types/poi",
        "@poi/plugin-typescript",
        "@poi/plugin-astroturf",
        "sass",
        "sass-loader",
        "react-hot-loader",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
]
`;

exports[`react-new works: file content: /hello/.eslintrc.json 1`] = `
"{
  \\"extends\\": [
    \\"./node_modules/@c4605/toolconfs/eslintrc.base\\",
    \\"./node_modules/@c4605/toolconfs/eslintrc.ts\\",
    \\"./node_modules/@c4605/toolconfs/eslintrc.prettier\\"
  ],
  \\"parserOptions\\": {
    \\"project\\": \\"./tsconfig.json\\"
  },
  \\"rules\\": {}
}"
`;

exports[`react-new works: file content: /hello/README.md 1`] = `
"# hello

## Usage

\`\`\`bash
yarn start # watch and serve code
yarn build # build code
\`\`\`
"
`;

exports[`react-new works: file content: /hello/package.json 1`] = `
"{
  \\"name\\": \\"hello\\",
  \\"version\\": \\"0.1.0\\",
  \\"main\\": null,
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"start\\": \\"poi -r ts-node/register --parallel --serve ./src\\",
    \\"build\\": \\"poi -r ts-node/register --parallel ./src\\"
  },
  \\"devDependencies\\": {},
  \\"dependencies\\": {},
  \\"prettier\\": \\"@c4605/toolconfs/prettierrc\\"
}"
`;

exports[`react-new works: file content: /hello/poi.config.ts 1`] = `
"import { Config } from 'poi'

const config: Config = {
  entry: 'src/index.tsx',
  plugins: [
    {
      resolve: '@poi/plugin-typescript',
      options: {},
    },
    {
      resolve: '@poi/plugin-astroturf',
      options: {
        loaderOptions: {
          extension: '.scss',
        },
      },
    },
  ],
}

export default config
"
`;

exports[`react-new works: file content: /hello/src/index.tsx 1`] = `
"import 'react-hot-loader'
import * as React from 'react'
import * as ReactDOM from 'react-dom'
import { css } from 'astroturf'

function renderApp() {
  ReactDOM.render(<h1>It works</h1>, document.getElementById('app')!)
}

renderApp()
;(module as any).hot.accept(renderApp)

css\`
  h1 {
    font-size: 32px;
  }
\`
"
`;

exports[`react-new works: file content: /hello/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@c4605/toolconfs/tsconfig\\",
  \\"compilerOptions\\": {
    \\"jsx\\": \\"react\\"
  }
}"
`;

exports[`react-new works: file structure 1`] = `
Array [
  "/hello/package.json",
  "/hello/.eslintrc.json",
  "/hello/README.md",
  "/hello/poi.config.ts",
  "/hello/tsconfig.json",
  "/hello/src/index.tsx",
]
`;

exports[`react-new works: rule tasks 1`] = `
Array [
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "prettier",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "eslint",
        "eslint-config-prettier",
        "@typescript-eslint/parser",
        "@typescript-eslint/eslint-plugin",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "@c4605/toolconfs",
        "react",
        "@types/react",
        "react-dom",
        "@types/react-dom",
        "astroturf",
      ],
      "type": "default",
      "workingDirectory": "hello",
    },
  },
  Object {
    "name": "@c4g/node-package-install-task",
    "options": Object {
      "packageNames": Array [
        "typescript",
        "ts-node",
        "@types/node",
        "poi",
        "@types/poi",
        "@poi/plugin-typescript",
        "@poi/plugin-astroturf",
        "sass",
        "sass-loader",
        "react-hot-loader",
      ],
      "type": "dev",
      "workingDirectory": "hello",
    },
  },
]
`;
